change logo and m1 system

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" type="image/png" href="//headicon.png" sizes="256x256" />
+
+    <!-- 强化兼容性，适配 iOS / Android -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/Headicon/headicon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/Headicon/headicon.png" />
 
 
-    <title>System M1</title>
+
+    <title>M1 System.</title>
   </head>
   <body>
     <div id="root"></div>
